--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ffffff;
     --foreground: #ededed;
   }
 }
@@ -77,6 +77,7 @@ button {
   height: 35px;
   width: 100%;
   max-width: 400px;
+  cursor: pointer;
   border: 0;
   text-transform: uppercase;
   font-size: 12px;
