--- a/app/components/pages/dashboard.module.css
+++ b/app/components/pages/dashboard.module.css
@@ -13,6 +13,8 @@
   padding: 10px;
   flex-direction: row;
   justify-content: space-between;
+  width: 95%;
+  margin: 0 auto;
 }
 
 .dashBoard > div.header > div:nth-child(1) > p {
@@ -28,9 +30,9 @@
 .distribution {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   padding: 15px;
-  margin-top: 25px;
-  margin-bottom: 25px;
   position: relative;
+  width: 95%;
+  margin: 25px auto;
 }
 
 .distribution > div.map {
@@ -69,4 +71,57 @@
 
 .filter > small {
   font-size: 11px;
+}
+
+.districtData {
+  display: flex;
+}
+
+.districtData > .distributors {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 30%;
+  max-width: 30%;
+  max-height: 700px;
+  overflow-y: auto;
+}
+
+.districtData > .distributors > div {
+  padding: 5px;
+  border-bottom: 1px solid grey;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  display: flex;
+  flex-direction: column;
+}
+
+.districtData > .distributors > div:hover {
+  background: rgb(196, 196, 196);
+}
+
+.distData {
+  max-height: 700px;
+  padding: 10px;
+  width: 100%;
+  max-height: 700px;
+  overflow-y: auto;
+}
+
+.distsSales {
+  width: 100%;
+}
+
+.citySelection {
+  display: flex;
+  width: 100%;
+  overflow-x: auto;
+}
+
+.citySelection > button {
+  margin: 0 2px;
+  min-width: 200px;
+}
+
+.citySelection > button:disabled {
+  background: grey;
 }
