--- a/app/components/pages/dashboard.module.css
+++ b/app/components/pages/dashboard.module.css
@@ -224,3 +224,13 @@
 .byPerformance > div > div > div > h5 {
   font-size: 14px;
 }
+
+.dist {
+  padding: 10px 20px;
+}
+
+.dist > div {
+  width: 100%;
+  margin-top: 30px;
+  height: 300px;
+}
